Cambios al .html y css

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<h1>Parrafo de inicio</h1>
-	<p>texto ejemplo </p>
+	<div id="container">
+		<div id="post">
+			<h1>Ramas en GIt</h1>
+			<p>Ejemplo para ver el funcionamiento de las ramas en GIT</p>
+		</div>
+	</div>
 
 </body>
 </html>
