modifique en un branch en cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 	<div id="container">
+		<div id="cabecera">
+			Cabecera
+		</div>
 		<div id="post">
-			<h1>Ramas en GIt</h1>
+			<h1>Ramas en GIT</h1>
 			<p>Ejemplo para ver el funcionamiento de las ramas en GIT</p>
 		</div>
 	</div>
