agregado el contenido adicional del blog en master

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,9 @@
 <body>
 	<div id="container">
 		<div id="post">
-			<h1>Ramas en GIt</h1>
+			<h1>Ramas en GIT</h1>
 			<p>Ejemplo para ver el funcionamiento de las ramas en GIT</p>
+			<p>parrafo agregado en el master </p>
 		</div>
 	</div>
 
