agregado el contenido adicional del blog en cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
 		<div id="post">
 			<h1>Ramas en GIT</h1>
 			<p>Ejemplo para ver el funcionamiento de las ramas en GIT</p>
+			<p>parrafo agregado en rama cabecera</p>
 		</div>
 	</div>
 
