agregue linea , cambie cabecera master y color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<div id="cabecera">
 			Hyperblog
-			<span id="tagline"> Tu blog de confianza </span>
+			<span id="tagline"> Tu blog de master </span>
 		</div>
 		<div id="post">
 			<h1>Ramas en GIT</h1>
@@ -17,6 +17,7 @@
 			<p>parrafo agregado en el master </p>
 
 			<p>parrafo agregado en rama cabecera</p>
+			<p>parrafo adicionall </p>
 
 		</div>
 	</div>
