--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BlogPost</title>
+	<title>Bienvenidos a HyperBlog 2.0</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
