--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,10 @@
 			<p>un commit mas a el repo</p>
 
 		</div>
+		<div id="footer">
+			Haciendo el Footer
+			
+		</div>
 	</div>
-
 </body>
 </html>
