se sube el logo y diseño del header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Bienvenidos a HyperBlog 2.0</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<div id="container">
 		<div id="cabecera">
+			<img id="logo" src="images/spacex" />
 			Hyperblog
 			<span id="tagline"> Tu blog de master </span>
 		</div>
@@ -18,9 +20,9 @@
 
 			<p>parrafo agregado en rama cabecera</p>
 			
-			<p>parrafo adicionall </p>
+			<p>parrafo adicional </p>
 
-			<p>un commit mas a el repo</p>
+			<p>SE crear el header, después se hará el footer</p>
 
 		</div>
 	</div>
