se hace el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -24,9 +24,8 @@
 
 		</div>
 		<div id="footer">
-			Haciendo el desarollo del footer
-			
+			Haciendo el desarollo del footerW
 		</div>
 	</div>
-</body>
+</body>W
 </html>
