se cambia el titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 		<div id="cabecera">
 			<img id="logo" src="images/spacex" />
 			Hyperblog
-			<span id="tagline"> Tu blog de master </span>
+			<span id="tagline"> EL Blog Master</span>
 		</div>
 		<div id="post">
 			<h1>Ramas en GIT</h1>
