se crea el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,5 +25,8 @@
 				<p>Se crear el header, después se hará el footer</p>
 			</div>
 		</div>
+		 <div id="footer">
+			Hecho con amor en Platzi &lt;3
+	    </div>
 	</body>
 </html>
