agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,28 +5,34 @@
 	<title>Bienvenidos a HyperBlog 2.0</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-	<body>
-		<div id="container">
-			<div id="cabecera">
-				<img id="logo" src="images/spacex" />
-				Hyperblog
-				<span id="tagline"> EL Blog Master</span>
+<body>
+	<div id="container">
+		<div id="cabecera">
+			<img id="logo" src="images/spacex" />
+			Hyperblog
+			<span id="tagline"> EL Blog Master</span>
+		</div>
+		<div id="post">
+
+			<h1>Ramas en GIT</h1>
+			<div id="pic"><img src="images/darkFire.jpg" ></div>
+			<h2>Tecnología Chameleon Tone.</h2>
+
+			<p>Analógica o digital, la Dark Fire de Gibson ofrece una cantidad infinita de posibilidades tonales para combinar el tono de la guitarra con el ambiente. Y todo comienza con el elemento más básico de una guitarra: las pastillas. La Dark Fire de Gibson combina dos de las pastillas más populares de Gibson: la P90h en la posición del mástil y una Burstbucker 3 en el puente. Ambas están cubiertas con tapas tipo fibra de carbono, con un diseño impecable para combinar con el avanzado fundido de la Dark Fire.
+				Capacidad acústica. 
+			</p>
+			<p>	
+				La Dark Fire también permite ajustar y combinar el sonido acústico de la pastilla de puente piezoeléctrico con el sonido de las pastillas tradicionales de la guitarra. Esto se logra utilizando un revolucionario potenciómetro giratorio que forma parte del interruptor de palanca del selector de pastillas. Al girar el interruptor hacia la derecha o hacia la izquierda, se puede combinar el sonido acústico del piezoeléctrico desde cero por ciento de sonido acústico (100 por ciento pastillas tradicionales) hasta 100 por ciento de sonido acústico (pastillas no tradicionales).
+				Burstbucker 3.
+			</p>
+			<p>	
+				La Burstbucker 3 estrenó a en 1990 y, al igual que las Burstbucker 1 y 2, representa la motivación de Gibson para capturar y recrear las características de la clásica patente en trámite para las humbucker de fines de la década de los ‘50. En la planta original de Gibson en Kalamazoo, Michigan, se fabricaron las primeras humbucker PAF de Gibson con máquinas imprecisas, lo que originó pastillas con diversos grados de salida y tono. La línea Burstbucker representa dichas variaciones pero con algunos accesorios modernos. La Burstbucker 3 brinda un tono PAF históricamente preciso con dos bobinas ligeramente sobrebobinadas, que crean un sonido crudo y aireado con suficiente empuje como para abrirse camino en cualquier mezcla.
+			</p>
+			<p>				
 			</div>
-			<div id="post">
-				<h1>Ramas en GIT</h1>
-				<p>Ejemplo para ver el funcionamiento de las ramas en GIT</p>
-
-				<p>parrafo agregado en el master </p>
-
-				<p>parrafo agregado en rama cabecera</p>
-				
-				<p>parrafo adicional </p>
-
-				<p>Se crear el header, después se hará el footer</p>
+			<div id="footer">
+				Además, la Dark Fire cuenta con clavijas de bloqueo mejoradas, una cejilla de baja fricción a base de teflón, un puente que se traba en las clavijas y un sistema de cámara que le otorga a cada una un tono, balance y peso casi perfectos. También hace de la Dark Fire una de las guitarras Les Paul mejor sostenida que hayan sido producidas.
 			</div>
-				 <div id="footer">
-					Hecho con amor en Platzi &lt;3
-	    		</div>
 		</div>
 	</body>
-</html>
+	</html>
