Cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 		<div id="cabecera">
 			<img id="logo" src="images/spacex" />
 			Hyperblog
-			<span id="tagline"> EL Blog Master</span>
+			<span id="tagline"> EL Blog de Confianza</span>
 		</div>
 		<div id="post">
 			<h1>Ramas en GIT</h1>
